--- a/saiku-ui/js/saiku/plugins/I18n/po/ru.json
+++ b/saiku-ui/js/saiku/plugins/I18n/po/ru.json
@@ -199,7 +199,7 @@
   "Measure": "Мера",
   "Measure:": "Мера:",
   "Measure Name": "Имя Меры",
-  "Member Selector": "Выбрать участника",
+  "Member Selector": "Выбрать элемент",
   "Min": "Минимум",
   "mmmm dd yyyy Month Day Year": "mmmm dd yyyy Месяц День Год",
   "mmmm yyyy Month Year": "mmmm yyyy Месяц Год",
