&nbsp;save, Okay localization

--- a/saiku-ui/js/saiku/plugins/I18n/po/ru.json
+++ b/saiku-ui/js/saiku/plugins/I18n/po/ru.json
@@ -215,6 +215,8 @@
   "&nbsp;Clear&nbsp;": "&nbsp;Очистить&nbsp;",
   "&nbsp;Help&nbsp;": "&nbsp;Помощь&nbsp;",
   "&nbsp;New&nbsp;": "&nbsp;Новый&nbsp;",
+  "&nbsp;Okay&nbsp;": "&nbsp;OK&nbsp;",
+  "&nbsp;Save&nbsp;": "&nbsp;Сохранить&nbsp;",
   "&nbsp;Update&nbsp;": "&nbsp;Обновить&nbsp;",
   "New Dashboards": "Новые информационные панели",
   "New Folder": "Новая папка",
@@ -231,8 +233,8 @@
   "Not Between": "Не между",
   "not": "не",
   "No": "Нет",
-  "Okay": "Ок",
-  "Ok": "Ок",
+  "Okay": "OK",
+  "Ok": "OK",
   "Open Dashboards": "Открыть информационную панель",
   "Open Date Filter": " Открыть фильтры по дате",
   "Opening query...": "Открывается запрос...",
