--- a/saiku-ui/js/saiku/plugins/I18n/po/ru.json
+++ b/saiku-ui/js/saiku/plugins/I18n/po/ru.json
@@ -216,6 +216,7 @@
   "&nbsp;Help&nbsp;": "&nbsp;Помощь&nbsp;",
   "&nbsp;New&nbsp;": "&nbsp;Новый&nbsp;",
   "&nbsp;Okay&nbsp;": "&nbsp;OK&nbsp;",
+  "&nbsp;Open&nbsp;": "&nbsp;Открыть&nbsp;",
   "&nbsp;Save&nbsp;": "&nbsp;Сохранить&nbsp;",
   "&nbsp;Update&nbsp;": "&nbsp;Обновить&nbsp;",
   "New Dashboards": "Новые информационные панели",
