Add translate_word() and i18n for table

--- a/saiku-ui/js/saiku/plugins/I18n/po/ru.json
+++ b/saiku-ui/js/saiku/plugins/I18n/po/ru.json
@@ -64,6 +64,7 @@
   "Close": "Близко",
   "Close:": "Закрыть:",
   "Columns | Measures": "Колонки | Измерения",
+  " columns and ": " колонок и ",
   "Columns": "Колонки",
   "COLUMNS": "Колонки",
   "Confirm deletion": "Подтвердить удаление",
@@ -275,12 +276,14 @@
   "Remove Level": "Убать уровень",
   "Remove permission": "Убрать разрешение",
   "Remove": "Убрать",
+  "Rendering ": "Отрисовка ",
   "Repository": "Хранилище",
   "Re-render chart": "Повторная обработка диаграммы",
   "Reset Default": "Сбросить",
   "Reset query": "Сброс запроса",
   "Roles:": "Роли:",
   "Row Limit: (0 = none)": "Лимит строк: (0 = без лимита)",
+  "' rows...": " строк...",
   "Rows | Measures": "Строки | Измерения",
   "Rows": "Строки",
   "ROWS": "Строки",
