--- a/saiku-ui/js/saiku/plugins/I18n/po/ru.json
+++ b/saiku-ui/js/saiku/plugins/I18n/po/ru.json
@@ -283,7 +283,7 @@
   "Reset query": "Сброс запроса",
   "Roles:": "Роли:",
   "Row Limit: (0 = none)": "Лимит строк: (0 = без лимита)",
-  "' rows...": " строк...",
+  " rows...": " строк...",
   "Rows | Measures": "Строки | Измерения",
   "Rows": "Строки",
   "ROWS": "Строки",
