--- a/saiku-ui/js/saiku/plugins/I18n/po/ru.json
+++ b/saiku-ui/js/saiku/plugins/I18n/po/ru.json
@@ -362,6 +362,9 @@
   "translator_name": "Андрей Петров",
   "Tree Map": "Древовидное отображение",
   "Type:": "Тип:",
+  "Unable to create a pie chart, please check the data values.": "Невозможно сформировать диаграмму, проверьте значения исходных данных",
+  "Unable to create a sunburst chart, please check the data values.": "Невозможно сформировать солнечные лучи, проверьте значения исходных данных",
+  "Unable to create a treemap chart, please check the data values.": "Невозможно сформировать древовидное отображение, проверьте значения исходных данных",
   "Unsaved dashboard": "Несвязанная информационная панель",
   "Unsaved query": "Новый запрос",
   "Updating chart data....": "Обновление данных диаграммы...",
