Translate Accumelated, down, All, ...

--- a/saiku-ui/js/saiku/plugins/I18n/po/ru.json
+++ b/saiku-ui/js/saiku/plugins/I18n/po/ru.json
@@ -1,6 +1,7 @@
 {
   "#,##0.00 Decimal": "#,##0.00 Вещественное",
   "About": "О программе",
+  "Accumulated": "Суммарно",
   "Add a custom format": "Ввыести пользовательский формат",
   "Add Folder": "Добавить папку",
   "Add new tag by selecting cells from your result!": "Пометить выбранные ячейки",
@@ -23,8 +24,8 @@
   "Autocomplete Filter": "Автозаполнение фильтра",
   "Automatic execution": "Автоматическое выполнение",
   "Available Databases:": "Доступные базы данных:",
-  "Available members": "Доступные участники",
-  "Available members:": "Доступные члены",
+  "Available members": "Доступные элементы",
+  "Available members:": "Доступные элементы",
   "Average": "Среднее",
   "Avg": "Среднее",
   "avg": "уср",
@@ -111,6 +112,7 @@
   "Don't show totals": "Не показывать итоги",
   "Don't show": "Не показывать",
   "Dot": "Точечная диаграмма",
+  "down": "вниз",
   "Drill across on cell": "Горизонтальная детализация по ячейке",
   "Drill Across": "Горизонтальная детализация",
   "Drill through current query": "Детализировать текущий запрос",
@@ -369,8 +371,7 @@
   "Unsaved query": "Новый запрос",
   "Updating chart data....": "Обновление данных диаграммы...",
   "Upload License": "Загрузить лицензию",
-  "Used members:": "Использованные члены:",
-  "Used members": "Участники использовали",
+  "Used members:": "Использованные элементы:",
   "Use Result": "Использовать результат",
   "Username: admin": "Имя пользователя: admin",
   "Username:": "Имя пользователя:",
